--- a/clients/owner-client/src/index.html
+++ b/clients/owner-client/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Nosh Nexus</title>
   <base href="/">
+  <meta name="description" content="Nosh Nexus - Explore and order from restaurants, bars, nightclubs,... A comprehensive software solution for owners to manage orders and track economic data.">
+  <meta name="keywords" content="Nosh Nexus, restaurant orders, bar orders, nightclub orders, order management, business software, economic tracking">
+  <meta name="author" content="zuna">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
