Can get table from url

--- a/clients/customer-client/src/index.html
+++ b/clients/customer-client/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Nosh Nexus</title>
   <base href="/">
-  <meta name="description" content="Discover, review, and order from your favorite restaurant, night club, bar, etc. with Nosh Nexus. Explore a variety of dining, drinking options, leave reviews, and conveniently make orders all in one place.">
+  <meta name="description" content="Discover, review, and order from your favorite place with Nosh Nexus. Explore a variety of dining, drinking options, leave reviews, and conveniently make orders all in one place.">
   <meta name="keywords" content="Nosh Nexus, restaurant orders, bar orders, nightclub orders, order management, business software, family, friends, rest">
   <meta name="author" content="zuna">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
